@@ -20,7 +20,7 @@ GeneratePswarmVisualization=function(Data,ProjectedPoints,LC,PlotIt=FALSE,Comput
 #											It real grid size is predfined by Pswarm, but you may choose a factor x*res$LC if you so desire.
 #											Therefore, The resulting grid size is given back here.
 #author MT 03/16
-  Data=checkInputDistancesOrData(Data)
+  Data=checkInputDistancesOrData(Data,funname='GeneratePswarmVisualization')
   
 if(missing(LC)){
   LC=ceiling(apply(ProjectedPoints,2,max))+1
@@ -174,9 +174,14 @@ vec=pmax(seq(from=AnfangsRadius-1,by=-1,length.out = HeuristischerParameter),1)
 
   Umap=calcUmatrixToroid(wts)
 LCnew=c(dim(wts)[1],dim(wts)[2])
-if(PlotIt){
+
+gplotres=FALSE
+if(isTRUE(PlotIt)){
   requireNamespace("GeneralizedUmatrix")
-  GeneralizedUmatrix::plotTopographicMap(Umap,BMUs,NoLevels=10)
+  #GeneralizedUmatrix::plotTopographicMap(Umap,BMUs,NoLevels=10)
+  Cls=rep(1,nrow(BMUs))
+  gplotres=TopviewTopographicMap(GeneralizedUmatrix = Umap,BestMatchingUnits = BMUs,Cls = Cls,Tiled =TRUE,BmSize =8) #Sondern Gebirge=Unbekannte Orte der U-Matrix
+  print(gplotres)
 }
-return(list(Bestmatches=BMUs,Umatrix=Umap,WeightsOfNeurons=wts,GridPoints=Points,LC=LCnew))
+return(list(Bestmatches=BMUs,Umatrix=Umap,WeightsOfNeurons=wts,GridPoints=Points,LC=LCnew,PlotlyHandle=gplotres))
 }
