@@ -1,5 +1,7 @@
 Version 1.1.4 (2020-02-29 GitHub)
     o Bugfix:  checkInputDistancesOrData, DBSclustering, Pswarm, setGridSize and ShortestGraphPathsC: using unname in isSymmetric to check correctly of symmetric distance matrix
+    o checkInputDistancesOrData is now used in RobustNormalization and Pswarm correctly and indicates in which function the errors lies.
+    o Improvement: DBSclustering now provides the same colored branches (depending on frequency) as the topograpghcMap visualization with default colors. This makes a direct comparison of cluster structres more evident as it is clearly presented which projected point belongs to which high-dimensional point in the dendrogram.
 
 Version 1.1.3 (2020-02-02 CRAN)
     o Bugfix: deleted dependcy rowr because it was taken down from CRAN.
